@@ -13,6 +13,12 @@
 * Updated the translation template.
 * Adds support for the GROUPS_BLOG_PROTECT_GROUP constant to determine which group is used to protect the blog.
 * Adds support for the GROUPS_BLOG_PROTECT_GROUP_n constant, where n is the blog ID, to determine which group is used to protect a particular blog in a multisite setup.
+* Updated redirection processing to avoid redirect loops caused by redirecting to posts protected by Groups.
+* Updated information on chosen post for redirection, adds link to post and shows post type.
+* Updated the plugin tags for context.
+* Updated the plugin description and information about its features.
+* Updated the plugin's settings screen and information displayed.
+* Moved the plugin's menu to the Groups menu (unless if Groups is missing in which case it is displayed under Settings).
 
 = 1.3.0 =
 * WordPress 5.7 compatible.
